Added power checkbox to form